# tasklist

./: .gitignore  Cargo.toml  pre-commit  todo.adoc
libtasklist/: Cargo.toml
libtasklist/src/: command.rs  lib.rs  model.rs
tasklist-cli/: Cargo.toml
tasklist-cli/src/: http.rs  local.rs  main.rs
tasklist-lib/: Cargo.toml
tasklist-lib/src/: db.rs  lib.rs
tasklist-lib/src/db/: model.rs  task.rs  tasklist.rs  tasklists.rs
tasklist-server/: Cargo.toml
tasklist-server/migrations/2022-06-01-175736_initial/: down.sql  up.sql
tasklist-server/src/: db.rs  main.rs  model.rs  routine.rs  schema.rs  task.rs  tasklist.rs
tasklist-server/src/db/: model.rs  schema.rs
tasklist-webclient/: package-lock.json  package.json
tasklist-webclient/src/: App.vue  main.js
tasklist-webclient/src/components/: TaskItem.vue  TaskList.vue
tasklist-webclient/src/router/: index.js
tasklist-webclient/src/views/: ArchiveView.vue  HomeView.vue
util/: create.sql
