[package]
name = "tasklist-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
color-eyre = "0.6.1"
reqwest = { version = "0.11.10", features = ["json"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
tasklists = { path = "../libtasklist" }
tokio = { version = "1.18.2", features = ["full"] }
