[package]
name = "tasklist-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
tasklists = { path = "../libtasklist" }
serde_json = "1.0.81"
