[package]
name = "tasklist-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
color-eyre = "0.6.1"
tracing = "0.1.34"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3.11", features = ["fmt"] }
tasklists = { path = "../libtasklist" }
serde_json = "1.0.81"

diesel = { version = "1.4.4", features = ["sqlite"] }
diesel_migrations = "1.4.0"
